# nnscaler

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  azure-pipelines.yml  gencode0.py  gencode1.py  inspect_ckpt_model.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tmp  tox.ini  tutorial.md
autodist/: .pre-commit-config.yaml  README.md  build_env.py  comm_profile.py
benchmark/: README.md  benchmark_base.py  benchmark_ring_attn.py  benchmark_ring_attn_varlen.py  benchmark_zigzag_attn.py  megatron_gpt_2.sh
cube/: __init__.py  compiler.py  cube.py  flags.py  parallel.py  program.py  utils.py
docs/: parallel_module.md
eval/: benchmark_gpt.sh  swin.sh  swin_fp16.sh  swin_infer.sh  swin_infer_224_782M_fp16.sh  swin_infer_bs1_640_Gfp16.sh  swin_infer_bs2_224_782Mfp32.sh  swin_infer_bs2_640_Gfp16.sh  swin_train_fp32.sh
examples/: attention.py  custom_ops.py  e2e.py  ffn.py  inspector.py  linear.py  linears.py  transformer.py  utils.py  warmup_scheduler.py
nnscaler/: __init__.py  compiler.py  flags.py  parallel.py  parallel_state.py  policies.py  program.py  utils.py  version.py
pipelines/: nightly-build.yaml  release.yaml
scripts/: aggregate.sh  dgx1_reorder_gpu.py  env-setup.sh  keep.py  megatron.sh  pre_install.sh  sync-itp.sh  sync-singularity.sh  sync.sh  sync4.sh
tests/: conftest.py  gpt_memory_profile.md  gpt_profile.md  launch_torchrun.py  test_codegen.py  test_examples.sh  test_execplan.py  test_execplan_grouping.py  test_grid.py  test_group.py  test_nccl.py  test_parser.py  test_physic_tensor.py  test_policies.py  test_prim_loop.py  test_profile_gpt.py  test_program.py  test_rvd_prim.py  test_utils.py  utils.py
unit_tests/: launch_torchrun.py  test_utils.py
utility/: comm_profile.py  dgx1_reorder_gpu.py  keep.py  prim_profiler.py  test_rvd_prim.py  (+1 more)
(+1032 files in other folders)
