[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version", "dependencies"]

name = "nnscaler"
description = "Parallelize DNN Traning from A Systematic Way"
readme = "README.md"
requires-python = ">=3.8"
# TODO: license
authors = [
    {name = "nnScaler Team", email = "nnscaler@microsoft.com"}  # FIXME: email
]
# TODO: keywords
# TODO: classifiers

[project.urls]
Homepage = "https://msrasrg.visualstudio.com/SuperScaler/_git/MagicCube"

[tool.setuptools]
dynamic.version.attr = "nnscaler.version.__version__"
dynamic.dependencies.file = "requirements.txt"

# NOTE:
# the following part only affects wheel, not sdist
# since our current plan is to use cppimport, sdist is not needed
packages.find.include = ["nnscaler*"]
package-data.nnscaler = ["autodist/csrc/*"]
